# insect

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md  compile_commands.json  xmake.lua
lib/linenoise/: CMakeLists.txt
src/: breakpoint.cpp  cli.rs  debugger.cpp  debugger.h  error.cpp  main.cpp  main.rs  unix.cpp  utils.cpp
src/breakpoint/: mod.rs
src/cmd/: break.rs  continue.rs  empty.rs  mod.rs
src/debugger/: command.rs  mod.rs
src/include/: breakpoint.h  debugger.h  error.h  linenoise.hpp  log.hpp  unix.h  utils.h
src/register/: consts.rs  mod.rs  register_descriptor.rs
src/utils/: errno.rs  libc.rs  mod.rs  result.rs
test/: hello_world.c
